--- a/assets/css/snake.css
+++ b/assets/css/snake.css
@@ -49,6 +49,7 @@ body {
 
 .header h3 {
   margin-top: 0;
+  margin-bottom: -10px;
 }
 
 .footer p {
@@ -60,8 +61,23 @@ body {
   color: #fff;
   text-decoration: none;
   font-weight: bold;
+  margin-top: 0;
+  padding-top: 0;
 }
 
 .footer a:hover {
   color: #EAEAE7;
+}
+
+@media screen and (max-height: 800px) {
+  #board {
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    transform: scale(0.8);
+    margin-top: -50px;
+  }
+
+  .header {
+    margin-bottom: 5px;
+  }
 }
