Add parakeet project

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,8 +1,8 @@
 .project-object {
-  border: 1px solid #EAEAE7;
+  border: 1px solid #D8D8D8;
   border-radius: 100px;
 }
 
 #last-updated {
-margin-top: 60px;
+  margin-top: 60px;
 }
